--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -358,21 +358,108 @@
 <body class="bg-gray-800 p-4 relative">
     <div id="app" class="container mx-auto p-4 shadow-lg rounded"> <!-- Removed .bg-slate-700 -->
 
-        <!-- Menu Button -->
-        <div class="fixed top-4 right-4 z-50 menu-container">
-            <button @click.stop="toggleMenu" class="bg-gray-700 text-white p-2 rounded flex flex-col items-center">
-                <span class="block w-6 h-1 bg-white mb-1"></span>
-                <span class="block w-6 h-1 bg-white mb-1"></span>
-                <span class="block w-6 h-1 bg-white"></span>
-            </button>
+                <!-- Menu Button -->
+                <div class="fixed top-4 right-4 z-50 menu-container">
+                    <button @click.stop="toggleMenu" class="bg-gray-700 text-white p-2 rounded flex flex-col items-center">
+                        <span class="block w-6 h-1 bg-white mb-1"></span>
+                        <span class="block w-6 h-1 bg-white mb-1"></span>
+                        <span class="block w-6 h-1 bg-white"></span>
+                    </button>
 
-            <!-- Dropdown Menu -->
-            <div v-if="menuOpen" class="absolute right-0 mt-2 bg-sky-900 shadow-lg rounded py-2 w-32">
-                <button class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">حلقات (قريباً)</button>
-                <button class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">أفلام (قريباً)</button>
-                <button class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">مانغا (قريباً)</button>
-            </div>
-        </div>
+                    <!-- Dropdown Menu -->
+                    <div v-if="menuOpen" class="absolute right-0 mt-2 bg-sky-900 shadow-lg rounded py-2 w-32">
+                        <button @click="openContentModal('episodes')" class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">حلقات (قريباً)</button>
+                        <button @click="openContentModal('movies')" class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">أفلام (قريباً)</button>
+                        <button @click="openContentModal('mangas')" class="block w-full text-center px-4 py-2 text-base font-bold text-white hover:bg-teal-600">مانغا (قريباً)</button>
+                    </div>
+                </div>
+
+                <!-- New Popup Window -->
+                <div v-if="showContentModal" class="fixed z-50 inset-0 overflow-y-auto bg-black bg-opacity-50 flex items-center justify-center">
+                    <div class="relative bg-cyan-900 text-slate-200 font-bold rounded-lg w-4/5 md:w-1/2 lg:w-1/3 max-h-[90vh] overflow-hidden flex flex-col">
+                        <!-- Sticky Header Section -->
+                        <div class="sticky top-0 bg-cyan-900 pt-4 pl-4 pr-4 pb-2">
+                            <div class="flex justify-between items-center">
+                                <h2 class="text-xl font-bold">النافذة المباشرة</h2>
+                                <button @click="closeContentModal" class="text-red-600 hover:text-yellow-300 font-bold focus:outline-none">
+                                    <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/close.png" alt="Close" class="h-8 w-8" />
+                                </button>
+                            </div>
+                        </div>
+
+                        <!-- Scrollable Content -->
+                        <div class="overflow-y-auto p-4 flex-1 always-visible-scrollbar">
+                            <fieldset>
+                                <legend class="font-bold text-lg">اختر نوع المحتوى</legend>
+                                <div class="flex flex-col gap-2">
+                                    <label class="flex items-center gap-2">
+                                        <input type="radio" v-model="selectedContentType" value="episodes" class="form-radio"> حلقات
+                                    </label>
+                                    <label class="flex items-center gap-2">
+                                        <input type="radio" v-model="selectedContentType" value="movies" class="form-radio"> أفلام
+                                    </label>
+                                    <label class="flex items-center gap-2">
+                                        <input type="radio" v-model="selectedContentType" value="mangas" class="form-radio"> مانغا
+                                    </label>
+                                </div>
+                            </fieldset>
+
+                            <!-- Episodes Tab Control -->
+                            <div v-if="selectedContentType === 'episodes'">
+                                <div class="flex gap-2 mt-4">
+                                    <button v-for="season in uniqueSeasons" :key="season" @click="setActiveSeason(season)" :class="{'bg-blue-500': activeSeason === season, 'bg-gray-700': activeSeason !== season}" class="text-white px-4 py-2 rounded">
+                                        الموسم {{ season }}
+                                    </button>
+                                </div>
+
+                                <fieldset v-if="activeSeason" class="mt-4">
+                                    <legend class="font-bold text-lg">حلقات الموسم {{ activeSeason }}</legend>
+                                    <div class="flex flex-wrap gap-2">
+                                        <button v-for="episode in episodesBySeason" :key="episode.EpisodeNumber" @click="handleEpisodeClick(episode)" class="bg-green-500 text-white px-4 py-2 rounded">
+                                            الحلقة {{ episode.EpisodeNumber }}
+                                        </button>
+                                    </div>
+                                </fieldset>
+                            </div>
+
+                            <!-- Movies Tab Control -->
+                            <div v-if="selectedContentType === 'movies'">
+                                <div class="flex gap-2 mt-4">
+                                    <button v-for="(group, index) in movieGroups" :key="index" @click="setActiveMovieGroup(index)" :class="{'bg-blue-500': activeMovieGroup === index, 'bg-gray-700': activeMovieGroup !== index}" class="text-white px-4 py-2 rounded">
+                                        المجموعة {{ index + 1 }}
+                                    </button>
+                                </div>
+
+                                <fieldset v-if="activeMovieGroup !== null" class="mt-4">
+                                    <legend class="font-bold text-lg">أفلام المجموعة {{ activeMovieGroup + 1 }}</legend>
+                                    <div class="flex flex-wrap gap-2">
+                                        <button v-for="movie in moviesByGroup" :key="movie.EpisodeNumber" @click="handleMovieClick(movie)" class="bg-green-500 text-white px-4 py-2 rounded">
+                                            الفيلم {{ movie.EpisodeNumber }}
+                                        </button>
+                                    </div>
+                                </fieldset>
+                            </div>
+
+                            <!-- Mangas Tab Control -->
+                            <div v-if="selectedContentType === 'mangas'">
+                                <div class="flex gap-2 mt-4">
+                                    <button v-for="(group, index) in mangaGroups" :key="index" @click="setActiveMangaGroup(index)" :class="{'bg-blue-500': activeMangaGroup === index, 'bg-gray-700': activeMangaGroup !== index}" class="text-white px-4 py-2 rounded">
+                                        المجموعة {{ index + 1 }}
+                                    </button>
+                                </div>
+
+                                <fieldset v-if="activeMangaGroup !== null" class="mt-4">
+                                    <legend class="font-bold text-lg">مانغا المجموعة {{ activeMangaGroup + 1 }}</legend>
+                                    <div class="flex flex-wrap gap-2">
+                                        <button v-for="manga in mangasByGroup" :key="manga.MangaNumber" @click="handleMangaClick(manga)" class="bg-green-500 text-white px-4 py-2 rounded">
+                                            المانغا {{ manga.MangaNumber }}
+                                        </button>
+                                    </div>
+                                </fieldset>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
             <!-- Error Message with Retry Button -->
     <div v-if="error" class="text-center text-xl mb-4 text-red-500 font-bold py-4">
@@ -5107,6 +5194,11 @@
                     menuOpen: false,
                     userJoined: false,
                     showEmptyPopup: false,
+                    showContentModal: false,
+                    selectedContentType: null,
+                    activeSeason: null,
+                    activeMovieGroup: null,
+                    activeMangaGroup: null,
                     errorMessage: "",
                     ep: 1152,
                     replacementDict: {
@@ -5129,6 +5221,9 @@
                     showTooltip6: false,
                     episodeTypeFilter: 'All',
                     episodes: [],
+                    mangas: [],
+                    selectedMovie: null,
+                    selectedManga: null,                    
                     loading: true,
                     loadProgress: 0,
                     circumference: 2 * Math.PI * 45, // 2πr where r=45
@@ -5721,6 +5816,26 @@
 
                 strokeDashOffset() {
                     return this.circumference - (this.loadProgress / 100) * this.circumference;
+                },
+
+                uniqueSeasons() {
+                    return [...new Set(this.episodes.map(ep => ep.EpisodeSeason))].sort();
+                },
+                episodesBySeason() {
+                    return this.episodes.filter(ep => ep.EpisodeSeason === this.activeSeason);
+                },
+                movieGroups() {
+                    const movies = this.episodes.filter(ep => ep.EpisodeNumber.includes('الفيلم'));
+                    return this.chunkArray(movies, 5);
+                },
+                moviesByGroup() {
+                    return this.movieGroups[this.activeMovieGroup] || [];
+                },
+                mangaGroups() {
+                    return this.chunkArray(this.mangas.flatMap(m => m.MangasIDs), 100);
+                },
+                mangasByGroup() {
+                    return this.mangaGroups[this.activeMangaGroup] || [];
                 },
 
                 filteredEpisodes() {
@@ -13805,6 +13920,52 @@
                     if (!event.target.closest(".menu-container")) {
                         this.menuOpen = false;
                     }
+                },
+
+                openContentModal(type) {
+                    this.selectedContentType = type;
+                    this.showContentModal = true;
+                    this.menuOpen = false;
+                },
+
+                closeContentModal() {
+                    this.showContentModal = false;
+                    this.selectedContentType = null;
+                    this.activeSeason = null;
+                    this.activeMovieGroup = null;
+                    this.activeMangaGroup = null;
+                },
+
+                setActiveSeason(season) {
+                    this.activeSeason = season;
+                },
+                setActiveMovieGroup(index) {
+                    this.activeMovieGroup = index;
+                },
+
+                setActiveMangaGroup(index) {
+                    this.activeMangaGroup = index;
+                },
+
+                handleEpisodeClick(episode) {
+                    this.selectedEpisode = episode;
+                    this.sendEpisodeToBot(episode.EpisodeVideosIDs);
+                },
+
+                handleMovieClick(movie) {
+                    this.selectedMovie = movie;
+                    this.sendEpisodeToBot(movie.EpisodeVideosIDs);
+                },
+
+                handleMangaClick(manga) {
+                    this.selectedManga = manga;
+                    this.sendMangaToBot(manga.MangaFileID, manga.MangaNumber);
+                },
+                
+                chunkArray(arr, size) {
+                    return Array.from({ length: Math.ceil(arr.length / size) }, (_, i) =>
+                        arr.slice(i * size, i * size + size)
+                    );
                 },
             },
             
